Fix svg whitespace

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -115,6 +115,12 @@ ul {
   &.-intro {
     margin-top: -1px;
   }
+  &.-skills,
+  &.-experience,
+  &.-projects,
+  &.-contact {
+    margin-bottom: -1px;
+  }
 }
 
 .hero__content {
